--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^5.52.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-watch": "^8.0.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
